--- a/css/layout.css
+++ b/css/layout.css
@@ -1456,3 +1456,13 @@ fieldset[disabled] .btn-theme {
     text-align: right;
   }
 }
+
+.slider {
+    width: 650px;
+    margin: 0 auto;
+}
+
+/* img {
+    width: 200px;
+    height: 200px;
+} */
